@@ -29,12 +29,6 @@ to mail me if you need any further information.
    may enter an infinite loop because of the weak telnet protocol
    implementation. Check this and fix.
 
- o The current UDP connection system refers on a weak extension
-   of the RFC 2292, which very few OS support (read: only linux).
-   If this option is unavailable (from the configure script) the
-   UDP connection is broken. I need a work-around like binding to
-   all the interfaces (see: ISC BIND9)
-
  o Currently the telnet codes parsing function overrides the
    send queue for the remote socket if it has to reply to some
    telnet codes found in the incoming data.  Check what the RFC
